# patterns-components

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
patterns_components/helpers/: api.py  enrichment.py  replication.py
patterns_components/shared/shared_v0/: enricher_helpers.py  importer_helpers.py  safe_enricher.py  stateful_importer.py
patterns_components/tests/: mock_api.py
patterns_components/tests/test_helpers/: test_api.py
patterns_templates/: README.md  templates.json
patterns_templates/Featured and Starter/ChartBot/: base.py  graph.yml  handle_data_request.py  manual_question.py  python.py  readme.md  route_question.py
patterns_templates/Featured and Starter/Crunchbot/: ack_message.py  filter_investments.sql  filter_orgs.sql  gmail.py  graph.yml  readme.md  send_gmail.py
patterns_templates/Featured and Starter/Hacker-News-Classifier/: README.md  chart_c9wvp6.json  chart_njrqy9.json  graph.yml
patterns_templates/Featured and Starter/PDL-Lead-Scoring-And-Routing/: enrich_emails_with_people_data_labs2.md  graph.yml  lead_metrics.json  metadata.json  people_data_labs__person_search.py  readme.md  score_leads.py  send_message.py  summarize_leads.sql
patterns_templates/Featured and Starter/Reddit-Summarization/: app_readme.md  generate_email.py  graph.yml  openai_gpt.py
patterns_templates/Featured and Starter/Salesforce-Case-Classifier/: graph.yml  prepare_records.py  readme.md
patterns_templates/Featured/Asana-Reviews-Demo/: graph.yml  (+11 more)
patterns_templates/Salesforce-Case-Classifier/: markdown.md  readme.md
(+186 files in other folders)
