[tool.poetry]
name = "patterns-components"
version = "0.1.2"
description = "Patterns open-source components"
authors = []
license = "BSD-3-Clause"
readme = "README.md"
packages = [{include = "patterns_components"}]

[tool.poetry.dependencies]
patterns-devkit = "^1.4.0"
datacopy = "^0.2.1"
python = ">=3.8.1,<3.11"
requests-mock = "^1.9.3"
semver = "^2.13.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = ">= 3.8.1"
isort = "^4.3.21"
pytest = "^6.2.5"
pytest-cov = "^2.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
