[tool.poetry]
name = "patterns-components"
version = "0.1.2"
description = "Patterns open-source components"
authors = []
license = "BSD-3-Clause"
readme = "README.md"
packages = [{include = "patterns_components"}]

[tool.poetry.dependencies]
patterns-devkit = "^1.4.0"
python = "^3.8.1"
python-dateutil = "^2.8.0"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = ">= 3.8.1"
pytest = "^7.2.2"
requests-mock = "^1.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
